@@ -38,6 +38,10 @@
 		<gd:comments>
 			<gd:feedLink href="http://www.google.com/calendar/feeds/test%40gmail.com/private/full/i12d4avieju0vogcga72aj3908/comments"/>
 		</gd:comments>
+		<gCal:guestsCanModify value="false"/>
+		<gCal:guestsCanInviteOthers value="false"/>
+		<gCal:guestsCanSeeGuests value="false"/>
+		<gCal:anyoneCanAddSelf value="false"/>
 		<gCal:sendEventNotifications value="false"/>
 		<gCal:sequence value="2"></gCal:sequence>
 		<gCal:uid value="4A24A0FF-EA3A-4839-AA09-F4283CB6D345"></gCal:uid>
@@ -153,6 +157,10 @@ END:VTIMEZONE</gd:recurrence>
 			<gd:reminder minutes="10"/>
 		</gd:when>
 		<gd:deleted/>
+		<gCal:guestsCanModify value="true"/>
+		<gCal:guestsCanInviteOthers value="true"/>
+		<gCal:guestsCanSeeGuests value="true"/>
+		<gCal:anyoneCanAddSelf value="true"/>
 		<gd:where valueString="Seattle"/>
 	</entry>
 </feed>
